--- a/mia/Views/Common/HXNoNetworkView/HXNoNetworkView.xib
+++ b/mia/Views/Common/HXNoNetworkView/HXNoNetworkView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
@@ -18,7 +18,6 @@
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NN-WiFiIcon" translatesAutoresizingMaskIntoConstraints="NO" id="QbL-1P-Iyc">
                             <rect key="frame" x="120" y="8" width="80" height="80"/>
-                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="QbL-1P-Iyc" secondAttribute="height" multiplier="1:1" id="Wuo-rw-lcW"/>
                                 <constraint firstAttribute="width" constant="80" id="oqi-mH-2G8"/>
@@ -26,21 +25,18 @@
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="网络未连接" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sq3-xM-VaJ">
                             <rect key="frame" x="115" y="103" width="90" height="22"/>
-                            <animations/>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="设备未连接到网络，请检查后点击重试" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6gH-rt-QQl">
                             <rect key="frame" x="24" y="135" width="272" height="20"/>
-                            <animations/>
                             <fontDescription key="fontDescription" type="system" weight="thin" pointSize="16"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tQo-iW-Kn0">
+                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tQo-iW-Kn0">
                             <rect key="frame" x="30" y="200" width="260" height="40"/>
-                            <animations/>
                             <color key="backgroundColor" red="0.26666666666666666" green="0.81960784313725488" blue="0.76078431372549016" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="4FA-1Z-Zv2"/>
@@ -53,15 +49,13 @@
                                 <action selector="playButtonPressed" destination="iN0-l3-epB" eventType="touchUpInside" id="JBJ-g7-wRg"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="或" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P2a-mJ-R74">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="或" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P2a-mJ-R74">
                             <rect key="frame" x="152" y="165" width="16" height="20"/>
-                            <animations/>
                             <fontDescription key="fontDescription" type="system" weight="thin" pointSize="16"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <animations/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="P2a-mJ-R74" firstAttribute="top" secondItem="6gH-rt-QQl" secondAttribute="bottom" constant="10" id="0Kc-LC-Mra"/>
@@ -80,7 +74,6 @@
                 </view>
                 <button opaque="NO" contentMode="scaleAspectFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XJL-jA-2zM">
                     <rect key="frame" x="273" y="28" width="32" height="32"/>
-                    <animations/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="XJL-jA-2zM" secondAttribute="height" multiplier="1:1" id="ad0-Fy-TZH"/>
                         <constraint firstAttribute="width" constant="32" id="b1E-R1-AMk"/>
@@ -89,12 +82,10 @@
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xbL-dS-dF6">
                     <rect key="frame" x="0.0" y="398" width="320" height="170"/>
-                    <animations/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
-                <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ax0-pt-vS2">
+                <button opaque="NO" contentMode="scaleAspectFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ax0-pt-vS2">
                     <rect key="frame" x="15" y="28" width="32" height="32"/>
-                    <animations/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="Ax0-pt-vS2" secondAttribute="height" multiplier="1:1" id="67f-i3-Cht"/>
                         <constraint firstAttribute="width" constant="32" id="Rdn-CE-M6E"/>
@@ -105,7 +96,6 @@
                     </connections>
                 </button>
             </subviews>
-            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="xbL-dS-dF6" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.3" id="44w-Ky-k4n"/>
