--- a/mia/Base.lproj/Favorite.storyboard
+++ b/mia/Base.lproj/Favorite.storyboard
@@ -262,6 +262,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d2z-Ku-wFX">
                                         <rect key="frame" x="140" y="20" width="40" height="40"/>
                                         <state key="normal" image="F-DeleteIcon"/>
+                                        <connections>
+                                            <action selector="deleteButtonPressed" destination="k3z-Sl-Ec6" eventType="touchUpInside" id="HBY-LH-LrP"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -285,13 +288,17 @@
                     </view>
                     <navigationItem key="navigationItem" title="我的收藏" id="GAn-nr-fqn">
                         <barButtonItem key="leftBarButtonItem" id="phB-Db-85R">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" id="x7D-GX-cOe">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="x7D-GX-cOe">
                                 <rect key="frame" x="16" y="7" width="71" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <inset key="titleEdgeInsets" minX="-42" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" title="全选">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="selectAllButtonPressed" destination="k3z-Sl-Ec6" eventType="touchUpInside" id="7o2-6Q-87L"/>
+                                </connections>
                             </button>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" id="ons-3b-Vya">
@@ -302,9 +309,15 @@
                                 <state key="normal" title="完成">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="doneButtonPressed" destination="k3z-Sl-Ec6" eventType="touchUpInside" id="msW-qD-wkG"/>
+                                </connections>
                             </button>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="selectedAllButton" destination="x7D-GX-cOe" id="owv-jU-4dE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A44-gw-yqG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
